Entrega del proyecto

--- a/src/components/Favorites/Favorites.module.css
+++ b/src/components/Favorites/Favorites.module.css
@@ -24,3 +24,29 @@
     border-radius: 0.4rem;
     margin: 0.5rem;
 }
+
+.selectorContainer{
+    display: flex;
+}
+
+.selector{
+    align-self: start;
+    justify-content: center;
+    align-items:flex-end;
+    height: 5vh;
+    margin-top: 20px;
+    text-align: justify;
+    background-color: rgba(116, 108, 108, 0.24); /* Ajusta el valor alfa (0.5 en este caso) para la transparencia */
+    padding: 7px; /* Ajusta el relleno según tus necesidades */
+    border-radius: 3px; /* Agrega bordes redondeados si lo deseas */
+    font-weight: bolder;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    color: #97ce4c;
+}
+
+
+.opcion{
+    color: rgb(180, 180, 8);
+    background-color: rgba(7, 7, 7, 0.24);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
