--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -1,11 +1,18 @@
 .container {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   margin-bottom: 50px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
 }
 
-.link{
+.navLinks {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.link {
     text-align: center;
     height: 30px;
     color: #927e76;
@@ -14,20 +21,18 @@
     padding: 0.5rem;
     border-radius: 8px;
     border: 1px solid #97ce4c;
-
 }
 
-.link:hover{
+.link:hover {
     border: none;
     transition: all .3s ease-in-out;
     background-color: #97ce4c;
     box-shadow: 1px 2px 1px 2px rgb(255, 255, 255, .5);
     color: #e89ac7;
-    cursor:rgb(82, 56, 48)r;
+    cursor: pointer;
 }
 
-
-.logOut{
+.logOut {
     padding: 15px;
     border: none;
     border-radius: 50%;
@@ -36,10 +41,44 @@
     color: #44281d;
 }
 
-.logOut:hover{
-    background-color: 	#496d1b;
+.logOut:hover {
+    background-color: #496d1b;
     color: #fcfcfc;
     border: none;
     transition: all .4s ease-in-out;
     box-shadow: 1px 2px 1px 2px rgba(112, 188, 53, 0.5);
+}
+
+.toggleBtn {
+    display: none; /* Ocultar el botón de toggle por defecto */
+}
+
+@media screen and (max-width: 580px) {
+
+    .container{
+        width: 100%;
+    }
+    
+    
+    .toggleBtn {
+        display: flex; /* Mostrar el botón de toggle en pantallas pequeñas */
+        background: none;
+        color:#fff;
+        border: none;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+    
+    .navLinks {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        padding: 20px;
+        background-color: rgba(0, 0, 0, 0.7);
+        box-shadow: 1px 1px 2px 2px rgba(131, 131, 131, 0.3);
+    }
+
 }
